--- a/style.css
+++ b/style.css
@@ -1,57 +1,62 @@
 /* Estilos generales */
 
+:root {
+  --primary-color: #2e2929e1;
+  --border-color: rgb(15, 216, 223);
+  --secondary-color: rgb(18, 20, 20);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-header {
-  border-bottom: dotted red;
-  width: 100%;
+body {
+  background-color: var(--primary-color);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  color: rgb(15, 216, 223);
+}
 
-  margin: auto;
+header {
+  border: dotted var(--border-color);
+  background-color: var(--secondary-color);
+  width: 100%;
+  padding: 10px;
   top: 0;
   position: sticky;
-  background-color: rgb(35, 39, 39);
   margin-bottom: auto;
 }
 
 .content {
-  border-top: dotted red;
-  border-bottom: dotted red;
-  margin-top: 10px;
-}
-
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background-color: #000000;
-  color: #9ad79b;
+  border: dotted var(--border-color);
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 15px;
 }
 
 .sidebar {
-  margin-left: 80%;
-  background: rgba(18, 20, 20, 0.555);
-  border: solid rgb(223, 16, 16);
-  padding-left: 25px;
+  background: var(--secondary-color);
+  border: dotted var(--border-color);
+  margin-left:85%;
+  padding: 20px;
+  width: 150px;
 }
-
 
 .features {
-  border-top: dotted red;
-  border-bottom: dotted red;
+  border: dotted var(--border-color);
   text-align: center;
+  margin-top: 20px;
+  padding: 15px;
 }
-
-
-
-
 
 footer {
-  border-top: dotted red;
-  text-align:center;    
+  border: dotted var(--border-color);
+  text-align: center;
+  padding: 10px;
+  margin-top: 220px;
 }
-
