--- a/style.css
+++ b/style.css
@@ -37,20 +37,21 @@ header {
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 15px;
-}
+  }
 
 .sidebar {
   background: var(--secondary-color);
   border: dotted var(--border-color);
-  margin-left:85%;
+  margin-right: 20px;
   padding: 25px;
-  width: 200px;
+  width: auto;
+  float: right;
 }
 
 .features {
   border: dotted var(--border-color);
   text-align: center;
-  margin-top: 20px;
+  margin-top: 260px;
   padding: 15px;
 }
 
@@ -58,5 +59,6 @@ footer {
   border: dotted var(--border-color);
   text-align: center;
   padding: 10px;
-  margin-top: 220px;
+  margin-top: 210px;
+  margin-bottom: 10px;
 }
